<resources>
    <string name="app_name">Archaeology App</string>

    <string name="hint_project_name">Project Name</string>
    <string name="dialog_new_project">New Project</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancel">Cancel</string>

    <string name="error_invalid_project_name">Enter a valid project name</string>
    <string name="error_project_name_required">Name required</string>
    <string name="error_project_duplicate">A project with this name already exists</string>
    <string name="error_project_create">Error creating project.</string>

        <string name="category">Category:</string>
        <string name="photos">Photos</string>
        <string name="sketches">Sketches</string>
        <string name="draw_sketch">Draw Sketch</string>
        <string name="create_new_record">Create New Record</string>
        <string name="back_to_project">Back to Project</string>
        <string name="main_menu">Main Menu</string>
    <string name="toast_category_not_implemented">
    Record creation not yet implemented for this category.
</string>
    <string name="error_location">Location not found</string>
    <string name="max_structure_lenght">Description too long</string>
    <string name="save_button">Save</string>
    <string name="error_dimension_max">Maximum of 50 characters</string>
    <string name="back_to_category">Back</string>
    <string name="site_name">Site Name</string>
    <string name="location">Location</string>
    <string name="researcher">Researcher</string>
    <string name="error_context_max">Maximum of 300 characters</string>
    <string name="description">Description</string>
    <string name="soil_colour">Soil Colour</string>
    <string name="soil_type">Soil Type</string>
    <string name="error_site_name_required">Site name is required</string>
    <string name="error_location_required">Location is required</string>
    <string name="error_description_max">Maximum 300 characters</string>
    <string name="toast_site_saved">Site saved successfully!</string>
    <string name="toast_site_save_error">Error saving site</string>
    <string name="date_record"> Date of Record </string>
    <string name="error_max_name"> The name can not be that long</string>
    <string name="toast_location_not_found">Location could not be found </string>
    <string name="artifact_description">Artifact Description</string>
    <string name="artifact_type">Type</string>
    <string name="artifact_material">Material</string>
    <string name="artifact_dimensions">Dimensions</string>
    <string name="artifact_context">Archaeological Context</string>
    <string name="artifact_discovery_date">Discovery Date</string>
    <string name="save_artifact">Save Artifact</string>
    <string name="error_Type_description_required">Type description needed</string>
    <string name="error_type_description_max">Type description too long</string>
    <string name="error_artifact_description_required">Description is required</string>
    <string name="error_artifact_description_max">Maximum 300 characters</string>
    <string name="error_artifact_type_required">Type is required</string>
    <string name="error_artifact_type_max">Maximum 100 characters</string>
    <string name="error_artifact_dimensions_max">Maximum 50 characters</string>
    <string name="error_artifact_context_max">Maximum 300 characters</string>
    <string name="error_material_max">Maximum 100 characters </string>
    <string name="toast_artifact_saved">Artifact saved successfully!</string>
    <string name="toast_artifact_save_error">Error saving artifact</string>
    <string name="gis_data_type">Data Type</string>
    <string name="gis_coordinates">Coordinates (lat, long)</string>
    <string name="gis_source">Source</string>
    <string name="gis_description">Description</string>
    <string name="gis_data_date">Information Date (YYYY-MM-DD)</string>
    <string name="save_gis">Save GIS Record</string>
    <string name="error_coordinate_required">Coordinate is a mandatory field</string>
    <string name="error_gis_type_required">Data type is required</string>
    <string name="error_gis_type_max">Maximum 100 characters</string>
    <string name="error_gis_coordinates_required">Coordinates are required</string>
    <string name="error_gis_coordinates_format">Invalid format. Use: lat, long</string>
    <string name="error_gis_source_max">Maximum 100 characters</string>
    <string name="error_gis_description_max">Maximum 300 characters</string>
    <string name="error_gis_date_required">Date is required</string>
    <string name="error_coordinate_match"> Coordinates need to be in an specific format, example: 53.350140, -6.266155 </string>
    <string name="error_source_max">Maximum of 100 characters</string>
    <string name="toast_gis_saved">GIS record saved successfully!</string>
    <string name="toast_gis_save_error">Error saving GIS record</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="note_date">Date</string>
    <string name="save_note">Save Note</string>
    <string name="error_note_title_required">Title is required</string>
    <string name="error_note_content_required">Content is required</string>
    <string name="error_note_content_max">Maximum 300 characters</string>
    <string name="toast_note_saved">Note saved successfully!</string>
    <string name="toast_note_save_error">Error saving note</string>
    <string name="photo_title">Archaeological Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_caption">Photo Caption</string>
    <string name="sketch_title">Sketch Title</string>
    <string name="sketch_note">Brief Note</string>
    <string name="photo_date">Photo/Sketch Date (YYYY-MM-DD)</string>
    <string name="back_arrow_with_text">← Back</string>
    <string name="error_take_photo_first">Take a photo before saving</string>
    <string name="error_photo_date_required">Date is required</string>
    <string name="toast_photo_saved">Photo record saved successfully!</string>
    <string name="toast_photo_save_error">Error saving photo record</string>
    <string name="error_subitles_max">Maximum of 150 characters</string>
    <string name="save_sketch">Save Sketch</string>
    <string name="project_title">Project:</string>
    <string name="archaeological_sites">Archaeological Sites</string>
    <string name="artifacts">Artifacts</string>
    <string name="gis_information">GIS Information</string>
    <string name="general_notes">General Notes</string>
    <string name="photos_and_sketches">Photos and Sketches</string>
    <string name="generate_pdf">Generate PDF</string>
</resources>
