<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_tipo_dado"
            android:hint="@string/gis_data_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_coordenadas"
            android:hint="@string/gis_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_fonte"
            android:hint="@string/gis_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_descricao"
            android:hint="@string/gis_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp" />
        <EditText
            android:id="@+id/input_data_gis"
            android:hint="@string/gis_data_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:focusable="false"
            android:clickable="true" />


        <Button
            android:id="@+id/btn_voltar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_salvar_gis"
            android:text="@string/save_gis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>
