<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_titulo_anotacao"
            android:hint="@string/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/input_conteudo_anotacao"
            android:hint="@string/note_content"
            android:minHeight="120dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/input_data_criacao"
            android:hint="@string/note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_voltar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_salvar_anotacao"
            android:text="@string/save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
