<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_voltar_desenhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
        android:layout_margin="8dp" />


    <EditText
        android:id="@+id/input_titulo_croqui"
        android:hint="@string/sketch_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_anotacao_croqui"
        android:hint="@string/sketch_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <com.example.myapplication.view.custom.CroquiDrawingView
        android:id="@+id/desenho_croqui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EEE" />

    <Button
        android:id="@+id/btn_salvar_croqui"
        android:text="@string/save_sketch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp" />
</LinearLayout>
